samples/_failures_safe/1761318614_380e11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a7829d3.c: In function ‘main’:
./samples/SAFE/__tmp_0a7829d3.c:144: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_0a7829d3.c:143:5: error: expected declaration or statement at end of input
  143 |     if
      |     ^~
